# openWFN

./: .gitignore  .pyre_configuration  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: README.md
examples/ammonia/: README.md  ammonia.fchk  ammonia.gjf  ammonia.xyz
examples/methane/: README.md  methane.fchk  methane.gjf  methane.xyz
examples/water/: README.md  water.fchk  water.gjf  water.xyz
src/openwfn/: __init__.py  basis.py  cli.py  commands.py  constants.py  density.py  export.py  fchk.py  geometry.py  graph.py  grid.py  interactive.py  mo.py  utils.py  xyz.py
tests/: README.md  conftest.py  test_bonds.py  test_cli.py  test_constants.py  test_export.py  test_fchk.py  test_geometry.py  test_geometry_robustness.py  test_interactive.py  test_xyz.py
